k8s/local-test/05-db.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nest-db
  namespace: nest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nest-db
  template:
    metadata:
      labels:
        app: nest-db
    spec:
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #       - matchExpressions:
      #         - key: node-role.kubernetes.io/worker
      #           operator: Exists
      containers:
      - name: postgres
        image: postgres:16.4
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
        readinessProbe:
          exec:
            command: ["pg_isready", "-U", "postgres", "-d", "nest"]
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command: ["pg_isready", "-U", "postgres", "-d", "nest"]
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: nest-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nest-db
  namespace: nest
spec:
  selector:
    app: nest-db
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
