k8s/local-test/06-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nest-backend
  namespace: nest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nest-backend
  template:
    metadata:
      labels:
        app: nest-backend
    spec:
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #       - matchExpressions:
      #         - key: node-role.kubernetes.io/worker
      #           operator: Exists
      containers:
      - name: backend
        image: nest-backend:k8s
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        command: ["/home/owasp/init-backend.sh", "/home/owasp/entrypoint.sh"]
        readinessProbe:
          httpGet:
            path: /api/v1/
            port: 8000
          initialDelaySeconds: 120
          periodSeconds: 10
          failureThreshold: 10
        # resources:
        #   requests:
        #     memory: "128Mi"
        #     cpu: "250m"
        #   limits:
        #     memory: "256Mi"
        #     cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: nest-backend
  namespace: nest
spec:
  selector:
    app: nest-backend
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
