k8s/local-test/07-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nest-frontend
  namespace: nest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nest-frontend
  template:
    metadata:
      labels:
        app: nest-frontend
    spec:
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #       - matchExpressions:
      #         - key: node-role.kubernetes.io/worker
      #           operator: Exists
      containers:
      - name: frontend
        image: nest-frontend:k8s
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: nest-frontend
  namespace: nest
spec:
  selector:
    app: nest-frontend
  ports:
  - port: 3000
    targetPort: 3000
  type: ClusterIP
