k8s/local-test/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nest-ingress
  namespace: nest
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "false"
spec:
  rules:
  - host: nest.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: nest-backend
            port:
              number: 8000
      - path: /graphql
        pathType: Prefix
        backend:
          service:
            name: nest-backend
            port:
              number: 8000
      - path: /idx
        pathType: Prefix
        backend:
          service:
            name: nest-backend
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nest-frontend
            port:
              number: 3000
